--- a/scss/partials/_my-work.scss
+++ b/scss/partials/_my-work.scss
@@ -236,6 +236,8 @@
 	}
 }
 
+
+
 @media screen and (max-width: 900px) {
 	.mac {
 		width: 100px;
@@ -272,6 +274,7 @@
 	// }
 }
 
+
 @media screen and (max-width: 540px) {
 	.mac {
 		width: 40px;
@@ -285,7 +288,11 @@
 		width: 95%;
 		min-width: 0px;
 	}
-}
+
+	h3 {
+		font-size: 0.8rem;
+	}
+
 
 .mac-resize {
 		width: 55px;
@@ -294,3 +301,5 @@
 	.iphone-resize {
 		width: 27px;
 	}
+
+}
