--- a/scss/theme/_buttons-links.scss
+++ b/scss/theme/_buttons-links.scss
@@ -22,6 +22,8 @@ button:hover {
 		a {
 		color: $red;
 		transition: 0.5s;
+		font-weight: 500;
+		text-decoration: none;
 		}
 }
 
